# SIENNA-PA-MCP

./: .gitignore  .mcp.json  EVAL_PROMPTS.md  LICENSE  MCP_IMPROVEMENT_PROMPT.md  POWERANALYTICS_MCP_SUMMARY.md  PROJECT_SETUP.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
mcp-server/: .dockerignore  __init__.py  config.py  pyproject.toml  server.py  tools.py
mcp-server/examples/: README.md  basic_usage.py
mcp-server/sample_files/: README.md
mcp-server/tests/: __init__.py  test_config.py  test_tools.py
mcp-server/utils/: __init__.py
mcp_servers/poweranalytics/: DEMO.md  IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  SETUP.md  WORKFLOW.md  build_sysimage.jl  generate_index.py  main.py  poweranalytics.py  precompile_workload.jl  pyproject.toml  server.py
mcp_servers/poweranalytics/resources/: api_index.md  component_types.md
mcp_servers/poweranalytics/tests/: test_poweranalytics_tools.py
mcp_servers/weather/: main.py  weather.py
mcp_servers/weather/tests/: test_weather_tools.py
weather/: README.md  pyproject.toml
