[project]
name = "poweranalytics"
version = "0.1.0"
description = "MCP server for Sienna's PowerAnalytics API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "truststore>=0.10.4",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
